Completed the template

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -315,3 +315,42 @@
 .fifth_div1 img{
     width: 100%;
 }
+
+/* FOOTER SECTION */
+#foot{
+    color: white;
+    margin-top: 5%;
+    width: 100%;
+    background-color: rgb(0, 51, 95);
+}
+#footer{
+    width: 90%;
+    margin: auto;
+    padding-top: 8%;
+    display: flex;
+}
+#footer1{
+    width: 40%;
+    margin-right: 8%;
+}
+#footer1 h4{
+    font-weight: 800;
+}
+#footer2{
+    width: 30%;
+}
+#footer2 h4{
+    font-weight: 800;
+}
+#footer2 ul li{
+    line-height: 25px;
+}
+#footer3{
+    width: 30%;
+}
+#footer3 h4{
+    font-weight: 800;
+}
+#footer3 ul li{
+    line-height: 25px;
+}
